# embassy-plus

./: .gitignore  LICENSE  Readme.md
embassy-pcf857x/: Cargo.toml  Readme.md
embassy-pcf857x/src/: lib.rs
embassy-pcf857x/src/i2c_lock/: mod.rs  to_lock.rs
embassy-pcf857x/src/pcf8574/: mod.rs  pcf8574_pin.rs
embassy-pcf857x/src/pcf8575/: mod.rs  pcf8575_pin.rs
embassy-rp-plus/: Cargo.toml  Readme.md
embassy-rp-plus/src/: lib.rs
embassy-rp-plus/src/builder/: mod.rs
embassy-rp-plus/src/builder/i2c/: i2c0.rs  mod.rs
embassy-rp-plus/src/builder/i2c/i2c0/: mod.rs  scl.rs  sda.rs
embassy-rp-plus/src/builder/i2c/i2c1/: mod.rs  scl.rs  sda.rs
embassy-rp-plus/src/builder/pwm/: base.rs  mod.rs
embassy-rp-plus/src/builder/pwm/pwm0/: a.rs  b.rs  mod.rs
embassy-rp-plus/src/builder/pwm/pwm1/: a.rs  b.rs  mod.rs
embassy-rp-plus/src/builder/pwm/pwm2/: a.rs  b.rs  mod.rs
embassy-rp-plus/src/builder/pwm/pwm3/: a.rs  b.rs  mod.rs
embassy-rp-plus/src/builder/pwm/pwm4/: a.rs  b.rs  mod.rs
embassy-rp-plus/src/builder/pwm/pwm5/: a.rs  b.rs  mod.rs
embassy-rp-plus/src/builder/pwm/pwm6/: a.rs  b.rs  mod.rs
embassy-rp-plus/src/builder/pwm/pwm7/: mod.rs
embassy-rp-plus/src/builder/spi/: base.rs  mod.rs
embassy-rp-plus/src/builder/spi/spi0/: clk.rs  miso.rs  mod.rs  mosi.rs  rx_builder.rs  tx_builder.rs
embassy-rp-plus/src/builder/spi/spi1/: clk.rs  miso.rs  mod.rs  mosi.rs  rx_builder.rs  tx_builder.rs
embassy-rp-plus/src/builder/uart/: base.rs  mod.rs
embassy-rp-plus/src/builder/uart/uart0/: cts.rs  mod.rs  rts.rs  rx.rs  rx_builder.rs  tx.rs  tx_builder.rs
embassy-rp-plus/src/builder/uart/uart1/: cts.rs  mod.rs  rts.rs  rx.rs  rx_builder.rs  tx.rs  tx_builder.rs
embassy-rp-plus/src/builder/usb/: mod.rs
embassy-rp-plus/src/builder/usb/usb_log/: mod.rs
embassy-rp-plus/src/macro/: mod.rs
embassy-rp-plus/src/traits/: mod.rs
embassy-rp-plus/src/traits/adc/: mod.rs
embassy-rp-plus/src/traits/clock/: gp_in.rs  gp_out.rs  mod.rs
embassy-rp-plus/src/traits/flash/: mod.rs
embassy-rp-plus/src/traits/gpio/: mod.rs
embassy-rp-plus/src/traits/i2c/: i2c0.rs  i2c1.rs  mod.rs
embassy-rp-plus/src/traits/pio/: mod.rs
embassy-rp-plus/src/traits/pwm/: mod.rs
embassy-rp-plus/src/traits/rtc/: mod.rs
embassy-rp-plus/src/traits/spi/: mod.rs  spi0.rs  spi1.rs
embassy-rp-plus/src/traits/uart/: mod.rs  uart0.rs  uart1.rs
embassy-rp-plus/src/traits/usb/: mod.rs  usb_log.rs
embassy-rp-plus/src/traits/watchdog/: mod.rs
embassy-socket/: Cargo.toml  Readme.md
embassy-socket/src/: err.rs  lib.rs  socket_build.rs  wait.rs
embassy-socket/src/channel/: callback_enum.rs  lock_channel.rs  mod.rs  read_channel.rs  socket_msg.rs  write_channel.rs
embassy-socket/src/connection/: mod.rs  pool.rs  socket_state.rs
embassy-socket/src/tcp_client/: callback.rs  callback_runner.rs  mod.rs  read_runner.rs
embassy-socket/src/tcp_server/: callback.rs  callback_runner.rs  mod.rs  read_runner.rs  runner.rs
embassy-stm32-plus/: Cargo.toml  Readme.md  build.rs
embassy-stm32-plus/src/: lib.rs
embassy-stm32-plus/src/builder/: mod.rs
embassy-stm32-plus/src/builder/can/: can1.rs  can2.rs
embassy-stm32-plus/src/builder/dac/: ch1.rs  ch2.rs  mod.rs
embassy-stm32-plus/src/builder/eth/: mod.rs  phy.rs  pins.rs
embassy-stm32-plus/src/builder/i2c/: base.rs  i2c1.rs  i2c2.rs  mod.rs
embassy-stm32-plus/src/builder/spi/: base.rs  mod.rs
embassy-stm32-plus/src/builder/spi/spi1/: mod.rs  rx.rs  tx.rs
embassy-stm32-plus/src/builder/spi/spi2/: mod.rs  rx.rs  tx.rs
embassy-stm32-plus/src/builder/spi/spi3/: mod.rs  rx.rs  tx.rs
embassy-stm32-plus/src/builder/uart/: base.rs  mod.rs
embassy-stm32-plus/src/builder/uart/uart1/: mod.rs  rx.rs  tx.rs
embassy-stm32-plus/src/builder/uart/uart2/: mod.rs  rx.rs  tx.rs
embassy-stm32-plus/src/builder/uart/uart3/: mod.rs  rx.rs  tx.rs
embassy-stm32-plus/src/builder/uart/uart4/: mod.rs  rx.rs  tx.rs
embassy-stm32-plus/src/builder/uart/uart5/: mod.rs  rx.rs  tx.rs
embassy-stm32-plus/src/builder/usb/: basis.rs  mod.rs  otg.rs
embassy-stm32-plus/src/irq_s/: mod.rs  usb_can1.rs
embassy-stm32-plus/src/traits/: mod.rs
embassy-stm32-plus/src/traits/adc/: mod.rs
embassy-stm32-plus/src/traits/can/: can1.rs  can2.rs  mod.rs
embassy-stm32-plus/src/traits/crc/: mod.rs
embassy-stm32-plus/src/traits/dac/: mod.rs
embassy-stm32-plus/src/traits/eth/: mod.rs
embassy-stm32-plus/src/traits/gpio/: mod.rs
embassy-stm32-plus/src/traits/i2c/: i2c1.rs  i2c2.rs  mod.rs
embassy-stm32-plus/src/traits/spi/: mod.rs  spi1.rs  spi2.rs  spi3.rs
embassy-stm32-plus/src/traits/uart/: mod.rs  uart1.rs  uart2.rs  uart3.rs  uart4.rs  uart5.rs
embassy-stm32-plus/src/traits/usb/: mod.rs
embassy-utils/: Cargo.toml  Readme.md
embassy-utils/src/: lib.rs
embassy-utils/src/cache/: base_cache.rs  mod.rs
embassy-utils/src/flash/: err.rs  flash_lock.rs  flash_util.rs  mod.rs  to_flash_util.rs  to_lock.rs
