[package]
name = "embassy-pcf857x"
version = "0.1.0"
edition = "2024"
description = "pcf8574 and pcf8575 by embassy-plus"
readme = "Readme.md"
authors = ["embassy-plus developers"]
license = "MIT/Apache-2.0"
categories = ["embedded"]
repository = "https://github.com/lifeRobot/embassy-plus/tree/main/embassy-pcf857x"

[dependencies]
embassy-rp = { version = "0.9.0", optional = true }
embassy-sync = "0.7.2"

[features]
rp = ["embassy-rp"]
# this is for compilation and document generation. It is not recommended to use
_rp2040 = ["embassy-rp/rp2040"]

[package.metadata.docs.rs]
features = ["_rp2040"]
