[package]
name = "embassy-rp-plus"
version = "0.1.1"
edition = "2024"
description = "embassy rp plus interface"
readme = "Readme.md"
authors = ["embassy-plus developers"]
license = "MIT/Apache-2.0"
categories = ["embedded"]
repository = "https://github.com/lifeRobot/embassy-plus/tree/main/embassy-rp-plus"

[dependencies]
embassy-executor = { version = "0.9.1", optional = true }
embassy-rp = { version = "0.9.0", features = ["time-driver", "critical-section-impl", "unstable-pac"] }
embassy-hal-internal = { version = "0.3.0", features = ["cortex-m"] }

# usb logger support
embassy-usb-logger = { version = "0.5.1", optional = true }
log = { version = "0.4.29", optional = true }

[features]
# support rp
rp2040 = ["embassy-rp/rp2040"]
rp235xa = ["embassy-rp/rp235xa"]
rp235xb = ["embassy-rp/rp235xb"]
defmt = ["embassy-rp/defmt"]

# hardware feature options
adc = []
flash = []
gpio = []
i2c0 = []
i2c1 = []
pio = []
spi0 = []
spi1 = []
uart0 = []
uart1 = []
# general purpose clock inputs
gp_in = []
# general purpose clock outputs
gp_out = []
usb_log = ["embassy-usb-logger", "log", "embassy-executor"]

[package.metadata.docs.rs]
features = ["rp2040", "usb_log"]
