[package]
name = "embassy-stm32-plus"
version = "0.2.1"
edition = "2021"
description = "embassy-stm32 plus"
readme = "Readme.md"
authors = ["nobody"]
license = "MIT/Apache-2.0"
categories = ["embedded"]
repository = "https://github.com/lifeRobot/embassy-stm32-plus"

[dependencies]
embassy-stm32 = { version = "0.2.0", features = ["defmt", "unstable-pac", "time-driver-any", "memory-x"] }
embassy-usb = { version = "0.3.0", optional = true }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[build-dependencies]
stm32-metapac = { version = "16.0.0", default-features = false }

[features]
# support exti, used to support W5500 and etc
exti = ["embassy-stm32/exti"]
# stm32c0x1 13
stm32c011j4 = ["embassy-stm32/stm32c011j4", "stm32-metapac/stm32c011j4"]
stm32c011j6 = ["embassy-stm32/stm32c011j6", "stm32-metapac/stm32c011j6"]
stm32c011d6 = ["embassy-stm32/stm32c011d6", "stm32-metapac/stm32c011d6"]
stm32c011f4 = ["embassy-stm32/stm32c011f4", "stm32-metapac/stm32c011f4"]
stm32c011f6 = ["embassy-stm32/stm32c011f6", "stm32-metapac/stm32c011f6"]
stm32c031f4 = ["embassy-stm32/stm32c031f4", "stm32-metapac/stm32c031f4"]
stm32c031f6 = ["embassy-stm32/stm32c031f6", "stm32-metapac/stm32c031f6"]
stm32c031g4 = ["embassy-stm32/stm32c031g4", "stm32-metapac/stm32c031g4"]
stm32c031g6 = ["embassy-stm32/stm32c031g6", "stm32-metapac/stm32c031g6"]
stm32c031k4 = ["embassy-stm32/stm32c031k4", "stm32-metapac/stm32c031k4"]
stm32c031k6 = ["embassy-stm32/stm32c031k6", "stm32-metapac/stm32c031k6"]
stm32c031c4 = ["embassy-stm32/stm32c031c4", "stm32-metapac/stm32c031c4"]
stm32c031c6 = ["embassy-stm32/stm32c031c6", "stm32-metapac/stm32c031c6"]
# stm32f100 19
stm32f100c4 = ["embassy-stm32/stm32f100c4", "stm32-metapac/stm32f100c4"]
stm32f100c6 = ["embassy-stm32/stm32f100c6", "stm32-metapac/stm32f100c6"]
stm32f100c8 = ["embassy-stm32/stm32f100c8", "stm32-metapac/stm32f100c8"]
stm32f100cb = ["embassy-stm32/stm32f100cb", "stm32-metapac/stm32f100cb"]
stm32f100r4 = ["embassy-stm32/stm32f100r4", "stm32-metapac/stm32f100r4"]
stm32f100r6 = ["embassy-stm32/stm32f100r6", "stm32-metapac/stm32f100r6"]
stm32f100r8 = ["embassy-stm32/stm32f100r8", "stm32-metapac/stm32f100r8"]
stm32f100rb = ["embassy-stm32/stm32f100rb", "stm32-metapac/stm32f100rb"]
stm32f100rc = ["embassy-stm32/stm32f100rc", "stm32-metapac/stm32f100rc"]
stm32f100rd = ["embassy-stm32/stm32f100rd", "stm32-metapac/stm32f100rd"]
stm32f100re = ["embassy-stm32/stm32f100re", "stm32-metapac/stm32f100re"]
stm32f100v8 = ["embassy-stm32/stm32f100v8", "stm32-metapac/stm32f100v8"]
stm32f100vb = ["embassy-stm32/stm32f100vb", "stm32-metapac/stm32f100vb"]
stm32f100vc = ["embassy-stm32/stm32f100vc", "stm32-metapac/stm32f100vc"]
stm32f100vd = ["embassy-stm32/stm32f100vd", "stm32-metapac/stm32f100vd"]
stm32f100ve = ["embassy-stm32/stm32f100ve", "stm32-metapac/stm32f100ve"]
stm32f100zc = ["embassy-stm32/stm32f100zc", "stm32-metapac/stm32f100zc"]
stm32f100zd = ["embassy-stm32/stm32f100zd", "stm32-metapac/stm32f100zd"]
stm32f100ze = ["embassy-stm32/stm32f100ze", "stm32-metapac/stm32f100ze"]
# stm32f101 29
stm32f101t4 = ["embassy-stm32/stm32f101t4", "stm32-metapac/stm32f101t4"]
stm32f101t6 = ["embassy-stm32/stm32f101t6", "stm32-metapac/stm32f101t6"]
stm32f101t8 = ["embassy-stm32/stm32f101t8", "stm32-metapac/stm32f101t8"]
stm32f101tb = ["embassy-stm32/stm32f101tb", "stm32-metapac/stm32f101tb"]
stm32f101c4 = ["embassy-stm32/stm32f101c4", "stm32-metapac/stm32f101c4"]
stm32f101c6 = ["embassy-stm32/stm32f101c6", "stm32-metapac/stm32f101c6"]
stm32f101c8 = ["embassy-stm32/stm32f101c8", "stm32-metapac/stm32f101c8"]
stm32f101cb = ["embassy-stm32/stm32f101cb", "stm32-metapac/stm32f101cb"]
stm32f101r4 = ["embassy-stm32/stm32f101r4", "stm32-metapac/stm32f101r4"]
stm32f101r6 = ["embassy-stm32/stm32f101r6", "stm32-metapac/stm32f101r6"]
stm32f101r8 = ["embassy-stm32/stm32f101r8", "stm32-metapac/stm32f101r8"]
stm32f101rb = ["embassy-stm32/stm32f101rb", "stm32-metapac/stm32f101rb"]
stm32f101rc = ["embassy-stm32/stm32f101rc", "stm32-metapac/stm32f101rc"]
stm32f101rd = ["embassy-stm32/stm32f101rd", "stm32-metapac/stm32f101rd"]
stm32f101re = ["embassy-stm32/stm32f101re", "stm32-metapac/stm32f101re"]
stm32f101rf = ["embassy-stm32/stm32f101rf", "stm32-metapac/stm32f101rf"]
stm32f101rg = ["embassy-stm32/stm32f101rg", "stm32-metapac/stm32f101rg"]
stm32f101v8 = ["embassy-stm32/stm32f101v8", "stm32-metapac/stm32f101v8"]
stm32f101vb = ["embassy-stm32/stm32f101vb", "stm32-metapac/stm32f101vb"]
stm32f101vc = ["embassy-stm32/stm32f101vc", "stm32-metapac/stm32f101vc"]
stm32f101vd = ["embassy-stm32/stm32f101vd", "stm32-metapac/stm32f101vd"]
stm32f101ve = ["embassy-stm32/stm32f101ve", "stm32-metapac/stm32f101ve"]
stm32f101vf = ["embassy-stm32/stm32f101vf", "stm32-metapac/stm32f101vf"]
stm32f101vg = ["embassy-stm32/stm32f101vg", "stm32-metapac/stm32f101vg"]
stm32f101zc = ["embassy-stm32/stm32f101zc", "stm32-metapac/stm32f101zc"]
stm32f101zd = ["embassy-stm32/stm32f101zd", "stm32-metapac/stm32f101zd"]
stm32f101ze = ["embassy-stm32/stm32f101ze", "stm32-metapac/stm32f101ze"]
stm32f101zf = ["embassy-stm32/stm32f101zf", "stm32-metapac/stm32f101zf"]
stm32f101zg = ["embassy-stm32/stm32f101zg", "stm32-metapac/stm32f101zg"]
# stm32f102 8
stm32f102c4 = ["embassy-stm32/stm32f102c4", "stm32-metapac/stm32f102c4", "embassy-usb"]
stm32f102c6 = ["embassy-stm32/stm32f102c6", "stm32-metapac/stm32f102c6", "embassy-usb"]
stm32f102c8 = ["embassy-stm32/stm32f102c8", "stm32-metapac/stm32f102c8", "embassy-usb"]
stm32f102cb = ["embassy-stm32/stm32f102cb", "stm32-metapac/stm32f102cb", "embassy-usb"]
stm32f102r4 = ["embassy-stm32/stm32f102r4", "stm32-metapac/stm32f102r4", "embassy-usb"]
stm32f102r6 = ["embassy-stm32/stm32f102r6", "stm32-metapac/stm32f102r6", "embassy-usb"]
stm32f102r8 = ["embassy-stm32/stm32f102r8", "stm32-metapac/stm32f102r8", "embassy-usb"]
stm32f102rb = ["embassy-stm32/stm32f102rb", "stm32-metapac/stm32f102rb", "embassy-usb"]
# stm32f103 29
stm32f103t4 = ["embassy-stm32/stm32f103t4", "stm32-metapac/stm32f103t4", "embassy-usb"]
stm32f103t6 = ["embassy-stm32/stm32f103t6", "stm32-metapac/stm32f103t6", "embassy-usb"]
stm32f103t8 = ["embassy-stm32/stm32f103t8", "stm32-metapac/stm32f103t8", "embassy-usb"]
stm32f103tb = ["embassy-stm32/stm32f103tb", "stm32-metapac/stm32f103tb", "embassy-usb"]
stm32f103c4 = ["embassy-stm32/stm32f103c4", "stm32-metapac/stm32f103c4", "embassy-usb"]
stm32f103c6 = ["embassy-stm32/stm32f103c6", "stm32-metapac/stm32f103c6", "embassy-usb"]
stm32f103c8 = ["embassy-stm32/stm32f103c8", "stm32-metapac/stm32f103c8", "embassy-usb"]
stm32f103cb = ["embassy-stm32/stm32f103cb", "stm32-metapac/stm32f103cb", "embassy-usb"]
stm32f103r4 = ["embassy-stm32/stm32f103r4", "stm32-metapac/stm32f103r4", "embassy-usb"]
stm32f103r6 = ["embassy-stm32/stm32f103r6", "stm32-metapac/stm32f103r6", "embassy-usb"]
stm32f103r8 = ["embassy-stm32/stm32f103r8", "stm32-metapac/stm32f103r8", "embassy-usb"]
stm32f103rb = ["embassy-stm32/stm32f103rb", "stm32-metapac/stm32f103rb", "embassy-usb"]
stm32f103rc = ["embassy-stm32/stm32f103rc", "stm32-metapac/stm32f103rc", "embassy-usb"]
stm32f103rd = ["embassy-stm32/stm32f103rd", "stm32-metapac/stm32f103rd", "embassy-usb"]
stm32f103re = ["embassy-stm32/stm32f103re", "stm32-metapac/stm32f103re", "embassy-usb"]
stm32f103rf = ["embassy-stm32/stm32f103rf", "stm32-metapac/stm32f103rf", "embassy-usb"]
stm32f103rg = ["embassy-stm32/stm32f103rg", "stm32-metapac/stm32f103rg", "embassy-usb"]
stm32f103v8 = ["embassy-stm32/stm32f103v8", "stm32-metapac/stm32f103v8", "embassy-usb"]
stm32f103vb = ["embassy-stm32/stm32f103vb", "stm32-metapac/stm32f103vb", "embassy-usb"]
stm32f103vc = ["embassy-stm32/stm32f103vc", "stm32-metapac/stm32f103vc", "embassy-usb"]
stm32f103vd = ["embassy-stm32/stm32f103vd", "stm32-metapac/stm32f103vd", "embassy-usb"]
stm32f103ve = ["embassy-stm32/stm32f103ve", "stm32-metapac/stm32f103ve", "embassy-usb"]
stm32f103vf = ["embassy-stm32/stm32f103vf", "stm32-metapac/stm32f103vf", "embassy-usb"]
stm32f103vg = ["embassy-stm32/stm32f103vg", "stm32-metapac/stm32f103vg", "embassy-usb"]
stm32f103zc = ["embassy-stm32/stm32f103zc", "stm32-metapac/stm32f103zc", "embassy-usb"]
stm32f103zd = ["embassy-stm32/stm32f103zd", "stm32-metapac/stm32f103zd", "embassy-usb"]
stm32f103ze = ["embassy-stm32/stm32f103ze", "stm32-metapac/stm32f103ze", "embassy-usb"]
stm32f103zf = ["embassy-stm32/stm32f103zf", "stm32-metapac/stm32f103zf", "embassy-usb"]
stm32f103zg = ["embassy-stm32/stm32f103zg", "stm32-metapac/stm32f103zg", "embassy-usb"]
# stm32f105 6
stm32f105r8 = ["embassy-stm32/stm32f105r8", "stm32-metapac/stm32f105r8", "embassy-usb"]
stm32f105rb = ["embassy-stm32/stm32f105rb", "stm32-metapac/stm32f105rb", "embassy-usb"]
stm32f105rc = ["embassy-stm32/stm32f105rc", "stm32-metapac/stm32f105rc", "embassy-usb"]
stm32f105v8 = ["embassy-stm32/stm32f105v8", "stm32-metapac/stm32f105v8", "embassy-usb"]
stm32f105vb = ["embassy-stm32/stm32f105vb", "stm32-metapac/stm32f105vb", "embassy-usb"]
stm32f105vc = ["embassy-stm32/stm32f105vc", "stm32-metapac/stm32f105vc", "embassy-usb"]
# stm32f107 4
stm32f107rb = ["embassy-stm32/stm32f107rb", "stm32-metapac/stm32f107rb", "embassy-usb"]
stm32f107rc = ["embassy-stm32/stm32f107rc", "stm32-metapac/stm32f107rc", "embassy-usb"]
stm32f107vb = ["embassy-stm32/stm32f107vb", "stm32-metapac/stm32f107vb", "embassy-usb"]
stm32f107vc = ["embassy-stm32/stm32f107vc", "stm32-metapac/stm32f107vc", "embassy-usb"]
# stm32l010c6 = ["embassy-stm32/stm32l010c6", "stm32-metapac/stm32l010c6"]

[package.metadata.docs.rs]
features = ["stm32f107vc"]
